<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="error_failed_title">Oh não…</string>
    <string name="warning_delete_all_title">Deletar tudo?</string>
    <string name="warning_delete_all">Você tem certeza que deseja deletar tudo? Essa ação não tem volta…</string>
    <string name="login_failed_fail_auth">Tem alguma coisa errada nesses dados. Verifique-os e tente novamente.</string>
    <string name="login_failed_fail_network">Tem alguma coisa errada na sua conexão. Verifique e tente novamente.</string>
    <string name="load_notes_failed">Deu alguma coisa errada ao carregar os dados. Tente novamente mais tarde.</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Sim</string>
    <string name="action_no">Não</string>
    <string name="action_sign_in">Entrar</string>
    <string name="invalid_username">Ops… Esse email não parece muito bem um email…</string>
    <string name="invalid_password">Ops… Essa senha não parece muito bem uma senha…</string>
    <string name="action_delete_all">Deletar tudo</string>
    <string name="action_logout">Sair</string>
    <string name="action_save">Salvar</string>
    <string name="switch_save_login">Salvar dados</string>
    <string name="hint_title">Título</string>
    <string name="hint_short_description">Resumo</string>
    <string name="hint_description">Nota</string>
    <string name="hint_priority">Prioridade</string>
    <string name="menu_priority_highest">1 - Muito alta</string>
    <string name="menu_priority_high">2 - Alta</string>
    <string name="menu_priority_medium">3 - Média</string>
    <string name="menu_priority_low">4 - Baixa</string>
    <string name="menu_priority_lowest">5 - Muito baixa</string>
    <string name="invalid_title">Ops… Esse título está em branco…</string>
    <string name="invalid_short_desc">Ops… Esse resumo está em branco…</string>
    <string name="invalid_description">Ops… Essa nota está em branco…</string>
    <string name="success_title">Tudo certo!</string>
    <string name="success_add_desc">Sua nota foi adicionada com sucesso!</string>
    <string name="success_edit_desc">Sua nota foi editada com sucesso!</string>
</resources>
