<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="view_model"
            type="br.com.hciraolo.notes.notes.presentation.NoteViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.presentation.NoteActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tlb_notes"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/abl_notes_layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="64dp"
            android:clipToPadding="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_title"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    tools:text="Um título qualquer..."/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_short_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_short_description"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/til_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_note_short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    tools:text="Um lorem ipsum qualquer..."/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_description"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/til_note_short_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_note_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mi massa, semper eu molestie sed, congue id tortor. Proin dignissim, orci nec viverra malesuada, felis arcu maximus sapien, vitae hendrerit metus sapien eget mi. Nam tincidunt nunc ipsum, maximus luctus lectus hendrerit nec. Mauris mollis blandit urna, non eleifend tellus convallis ac. Cras consectetur leo at aliquam finibus. \n\nNullam a velit lacus. Proin tincidunt sit amet nibh et efficitur. Aenean scelerisque pulvinar vulputate. Vivamus egestas tortor eros, non auctor felis tempus eu. Morbi commodo enim sed arcu suscipit, in rhoncus est condimentum. Phasellus aliquam massa sed dolor dignissim, nec mattis dui semper. Nunc at efficitur sem, sed auctor urna."/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_priority"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_priority"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/til_note_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_note_priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:text="1 - Muito alta"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnl_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLoading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>